--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a class="link" href="news.html">News</a></li> 
           <li><a class="link" href="homeLearning.html">Home Learning</a></li> 
           <li><a class="link" href="contact.html">Contact</a></li> 
+          <button class="btnLogin-popup">login</button>
         </ul>
       </nav>
       <button class="search-button">&#128269;</button>
