Added contact list

--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,14 @@
 
   <div>
     <h2 style="float: right;"> Location </h2>
+  </div>
 
-
+  <div>
+    <ul>
+      <li> Email:
+      </li>
+      <li> Phone: </li>
+    </ul>
   </div>
 
   <footer>
