updating faq page

--- a/faq.html
+++ b/faq.html
@@ -11,19 +11,17 @@
 
 <body>
 <h1> Frequently asked questions</h1>
+<h5>Barnhill Primary FAQ's</h5>
+
+<h2>School opening and closing times</h2>
+<p>09:00-15:15</p>
 
 
+<h2>School Dinners</h2>
+<p>School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to Parent Pay if you do not already have an account.  Children make a choice of RED, BLUE  or ORANGE  lunch in the morning, in order that they can have the dinner of their choice. Dinners can be ordered from home up to 4 weeks in advance on Parent Pay.  Menus are updated regularly by Tayside Contracts.</p>
 
-
-
-
-
-
-
-
-
-
-
+<h2>Strikes or Snow days</h2>
+<p>In the case of the school being shut due to dangerous weather conditions or strikes, parents will recieve a text in the morning at 08:00</p>
 
 
 
