--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
       <nav class="navigation">
         <ul>
-          <li><a href="index.html">Index</a></li> 
+          <li class="active"><a href="index.html">Index</a></li> 
           <li><a href="news.html">News</a></li> 
           <li><a href="homeLearning.html">Home Learning</a></li> 
           <li><a href="contact.html">Contact</a></li> 
