--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="news.html">News</a></li> 
           <li><a href="homeLearning.html">Home Learning</a></li> 
           <li><a href="contact.html">Contact</a></li> 
-          <button class="btnLogin-popup">login</button>
+          <a button class="btnLogin-popup">login</a></button>
           <button>&#128269;</button>
           <input type="text" placeholder="Search...">
         </ul>
