faq body content finalised

--- a/faq.html
+++ b/faq.html
@@ -16,6 +16,9 @@
 <h2>School opening and closing times</h2>
 <p>09:00-15:15</p>
 
+<h2>School break and lunch times</h2>
+<p>Break: 11:10 - 11:30
+Lunch: 13:15 - 14:00</p>
 
 <h2>School Dinners</h2>
 <p>School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to Parent Pay if you do not already have an account.  Children make a choice of RED, BLUE  or ORANGE  lunch in the morning, in order that they can have the dinner of their choice. Dinners can be ordered from home up to 4 weeks in advance on Parent Pay.  Menus are updated regularly by Tayside Contracts.</p>
@@ -23,7 +26,8 @@
 <h2>Strikes or Snow days</h2>
 <p>In the case of the school being shut due to dangerous weather conditions or strikes, parents will recieve a text in the morning at 08:00</p>
 
-
+<p> For more information on the school uniform click <a href="uniform.html">here</a> 
+  For more information on our privacy policy, click <a href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/schools-privacy-statement">here</a> </p>
 
 <div class="footer">
     <footer>
