--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li> 
           <li class="dropdown">
-            <button class="dropbtn">about</button>
+            <button class="dropbtn">About</button>
             <div class="dropdown-content">
               <a href="faq.html">FAQ</a>
               <a href="staff.html">Staff</a>
