--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 
 <body>
 
+  
+
+  <nav>
+
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li>ABOUT DROPDOWN</li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="homeLearning.html">Home Learning</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <input type="text" placeholder="search...">
+    <button>SEARCH</button>
+
+  </nav>
+
+
+
+
+
+
+
+
 
     <div class="footer">
     <footer>
