--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
 
-  
+  <div class="topBar">
+
+    <img src="logo.png">
+    <h1>Barnhill Primary School</h1>
+
+    <button id="loginBtn">Login</button>
+
+  </div> <!-- Closes div class topBar -->
 
   <nav>
 
