--- a/index.html
+++ b/index.html
@@ -22,17 +22,32 @@
   <nav>
 
     <ul>
+
       <li><a href="index.html">Home</a></li>
-      <li>ABOUT DROPDOWN</li>
+      <li>
+        <div class="dropdown">
+          <button class="aboutBtn">About <i class="fa fa caret-down"></i></button>
+          
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+
+        </div>
+          
+
+      </li>
       <li><a href="news.html">News</a></li>
       <li><a href="homeLearning.html">Home Learning</a></li>
       <li><a href="contact.html">Contact</a></li>
+
     </ul>
 
     <input type="text" placeholder="search...">
     <button>SEARCH</button>
 
-  </nav>
+  </nav> <!-- Closes the nav tag -->
 
 
 
