--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="topBar"> <!-- Opens div class topBar -->
 
-    <img src="logo.png">
+    <img src="bpslogo.png">
     <h1>Barnhill Primary School</h1>
 
     <button id="loginBtn">Login</button>
