--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="topBar"> <!-- Opens div class topBar -->
 
-    <img src="bpslogo.png">
+    <img id="logo" src="bpslogo.png" alt="School Logo">
     <h1>Barnhill Primary School</h1>
 
     <button id="loginBtn">Login</button>
@@ -28,9 +28,10 @@
       <div class="dropdown"> <!-- Opens div class dropdown -->
           <button class="aboutBtn">About <i class="fa fa caret-down"></i></button>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="faq.html">FAQ</a>
+            <a href="dates.html">Dates</a>
+            <a href="staff.html">Staff</a>
+            <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
 
         </div> <!-- Closes div class dropdown -->
