--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+<!-- ------------------- Top Bar ------------------- -->
+
   <div class="topBar"> <!-- Opens div class topBar -->
 
     <img id="logo" src="bpslogo.png" alt="School Logo">
@@ -17,6 +20,8 @@
     <button id="loginBtn">Login</button>
 
   </div> <!-- Closes div class topBar -->
+
+<!-- ------------------- Navigation ------------------- -->
 
   <nav>
 
@@ -47,18 +52,23 @@
     <button>SEARCH</button>
 
   </nav> 
+
+<!-- ------------------- Main Body ------------------- -->
+
+<div class="mainBody"> <!-- Opens div class mainBody -->
+
   <h1>Contact</h1>
 
-  <div>
     <h2 style="float: right;"> Location </h2>
-  </div>
-
-  <div>
+  
     <ul>
       <li> Email: </li>
       <li> Phone: </li>
     </ul>
-  </div>
+
+  </div> <!-- Closes div class mainBody -->
+
+<!-- ------------------- Footer ------------------- -->
 
   <div class="footer"> <!-- Opens div class footer -->
     <footer>
