--- a/homeLearning.html
+++ b/homeLearning.html
@@ -11,6 +11,8 @@
 
 <body>
 
+<!-- ------------------- Top Bar ------------------- -->
+
   <div class="topBar"> <!-- Opens div class topBar -->
 
     <img id="logo" src="bpslogo.png" alt="School Logo">
@@ -19,6 +21,8 @@
     <button id="loginBtn">Login</button>
 
   </div> <!-- Closes div class topBar -->
+
+<!-- ------------------- Navigation ------------------- -->
 
   <nav>
 
@@ -49,7 +53,16 @@
     <button>SEARCH</button>
 
   </nav> 
+
+<!-- ------------------- Main Body ------------------- -->
+
+<div class="mainBody"> <!-- Opens div class mainBody -->
+
   <h1>Home Learning</h1>
+
+</div> <!-- Closes div class mainBody -->
+
+<!-- ------------------- Footer ------------------- -->
 
   <div class="footer"> <!-- Opens div class footer -->
     <footer>
