--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<!-- ------------------- Top Bar ------------------- -->
   <div class="topBar"> <!-- Opens div class topBar -->
 
     <img id="logo" src="bpslogo.png" alt="School Logo">
@@ -18,6 +18,8 @@
     <button id="loginBtn">Login</button>
 
   </div> <!-- Closes div class topBar -->
+
+<!-- ------------------- Navigation ------------------- -->
 
   <nav>
 
@@ -48,6 +50,48 @@
     <button>SEARCH</button>
 
   </nav> 
+
+<!-- ------------------- Main Body ------------------- -->
+
+  <div class="mainBody"> <!-- Opens div class mainBody -->
+
+    <h2> Announcements:</h2>
+
+    <!-- CAROUSEL-->
+
+    <h2> Who are we?</h2>
+
+    <p>We are situated in the suburb of Broughty Ferry, Dundee.  We have a roll of over 400 pupils in P1-7 with another 60 children who attend the nursery. </p>
+
+    <h2> Our Values:</h2>
+
+    <!-- BRILL image -->
+    <ul> 
+      <li> Believe -</li>
+      <li> Respect -</li>
+      <li> Include -</li>
+      <li> Learn and Achieve -</li>
+      <li> Look After Each Othe -</li>
+    </ul>
+
+    <h2> Our Aims: </h2>
+
+    <ul>
+      <li> To create a welcoming, safe and happy school where everyone is valued. </li>
+      <li> To promote a sense of responsibility, respect and caring attitude in all pupils and staff. </li>
+      <li> To provide a broad, stimulating education by learning through discovery, challenge and enjoyment to meet the needs of each individual pupil. </li>
+      <li> To ensure that the whole school community feel included and are proud of their work and achievements both in and out of school. </li>
+      <li> To instill confidence in pupils and staff to develop skills for learning, life and work. </li>
+      <li> To encourage all to reflect and self-evaluate as they strive to achieve their goals. </li>
+    </ul>
+
+    <h2> Head Teacher's Message: </h2>
+
+    <!-- Head Teacher Image and Message -->
+
+  </div> <!-- Closes div class mainBody -->
+
+<!-- ------------------- Footer ------------------- -->
 
     <div class="footer"> <!-- Opens div class footer -->
     <footer>
