--- a/news.html
+++ b/news.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+<!-- ------------------- Top Bar ------------------- -->
+
   <div class="topBar"> <!-- Opens div class topBar -->
 
     <img id="logo" src="bpslogo.png" alt="School Logo">
@@ -17,6 +20,8 @@
     <button id="loginBtn">Login</button>
 
   </div> <!-- Closes div class topBar -->
+
+<!-- ------------------- Navigation ------------------- -->
 
   <nav>
 
@@ -47,6 +52,11 @@
     <button>SEARCH</button>
 
   </nav> 
+
+<!-- ------------------- Main Body ------------------- -->
+
+<div class="mainBody"> <!-- Opens div class mainBody -->
+
   <h1>This week's news!</h1>
 
   <script src="script.js"></script>
@@ -60,6 +70,9 @@
      of concern. This year, our JLT produced the first digital edition of BRILL News which
     can be found above. </p>
 
+  </div> <!-- Closes div class mainBody -->
+
+    <!-- ------------------- Footer ------------------- -->
     
     <div class="footer"> <!-- Opens div class footer -->
       <footer>
