--- a/faq.html
+++ b/faq.html
@@ -11,6 +11,8 @@
 
 <body>
 
+<!-- ------------------- Top Bar ------------------- -->
+
   <div class="topBar"> <!-- Opens div class topBar -->
 
     <img id="logo" src="bpslogo.png" alt="School Logo">
@@ -19,6 +21,8 @@
     <button id="loginBtn">Login</button>
 
   </div> <!-- Closes div class topBar -->
+
+<!-- ------------------- Navigation ------------------- -->
 
   <nav>
 
@@ -50,6 +54,10 @@
 
   </nav> 
 
+  <!-- ------------------- Main Body ------------------- -->
+
+  <div class="mainBody"> <!-- Opens div class mainBody -->
+
 <h1> Frequently asked questions</h1>
 <h5>Barnhill Primary FAQ's</h5><br>
 
@@ -66,6 +74,10 @@
 <p>In the case of the school being shut due to dangerous weather conditions or strikes, parents will recieve a text in the morning at 08:00</p><br>
 
 <p> For more information on the school uniform click <a href="uniform.html">here</a> <br>For more information on our privacy policy, click <a href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/schools-privacy-statement">here</a> </p>
+
+</div> <!-- Closes div class mainBody -->
+
+<!-- ------------------- Footer ------------------- -->
 
 <div class="footer"> <!-- Opens div class footer -->
   <footer>
