--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <li> Respect -</li>
       <li> Include -</li>
       <li> Learn and Achieve -</li>
-      <li> Look After Each Othe -</li>
+      <li> Look After Each Other -</li>
     </ul>
 
     <h2> Our Aims: </h2>
