Added some content :)

--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,20 @@
   <h1>Contact</h1>
 
     <h2 style="float: right;"> Location </h2>
+    <p>Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
+    <p> A map showing the location of our school is available here, our page on the Dundee City Council website.</p>
+    <p> The map may open in your device's own map application if you are using a mobile device. </p>
   
+    <h2> Tel: </h2>
     <ul>
-      <li> Email: </li>
-      <li> Phone: </li>
+      <li> School: 01382 436993 </li>
+    </ul>
+
+    <h2> Email: </h2>
+    <ul>
+      <li> School: barnhillprimary@dundeeschools.scot</li>
+      <li> Mrs Bruce: abruce174@dundeeschools.scot </li>
+      <li> Mr Smith: psmith966@dundeeschools.scot </li>
     </ul>
 
   </div> <!-- Closes div class mainBody -->
