--- a/staff.html
+++ b/staff.html
@@ -54,7 +54,18 @@
 <!-- ------------------- Main Body ------------------- -->
 
 <div class="mainBody"> <!-- Opens div class mainBody -->
+<table>
+<tr> <th> Class </th> <th> Teacher(s) </th></tr>
+<tr> <td> P1a P1b P1c</td> <td> Miss Swan Mrs Bain and Mrs Mackenzie Mrs Fairbairn</td> </tr>
+<tr> <td> P2a P2b	</td> <td> Mrs Hutchison Miss Kemp</td> </tr>
+<tr> <td> P3a P3b</td> <td> Mrs McVeigh and Mrs Alexander Mr Jones</td> </tr>
+<tr> <td> P4a P4b</td> <td> Miss Watt and Miss Airlie Mrs Fenton and Mrs J Alexander</td> </tr>
+<tr> <td> P5a P5b</td> <td> Mrs Stewart Mrs Watt </td> </tr>
+<tr> <td> P6a P6b</td> <td> Miss Stewart Miss Morrison</td> </tr>
+<tr> <td> P6/7 </td> <td> Miss Alexander </td> </tr>
+<tr> <td> P7a P7b	</td> <td> Miss Robertson Mrs Goldsmith</td> </tr>
 
+</table>
 </div> <!-- Closes div class mainBody -->
 
 <!-- ------------------- Footer ------------------- -->
