Trying break tags and styling for tables

--- a/staff.html
+++ b/staff.html
@@ -56,7 +56,7 @@
 <div class="mainBody"> <!-- Opens div class mainBody -->
 <table>
 <tr> <th> Class </th> <th> Teacher(s) </th></tr>
-<tr> <td> P1a P1b P1c</td> <td> Miss Swan Mrs Bain and Mrs Mackenzie Mrs Fairbairn</td> </tr>
+<tr> <td> P1a <br> P1b <br> P1c</td> <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td> </tr>
 <tr> <td> P2a P2b	</td> <td> Mrs Hutchison Miss Kemp</td> </tr>
 <tr> <td> P3a P3b</td> <td> Mrs McVeigh and Mrs Alexander Mr Jones</td> </tr>
 <tr> <td> P4a P4b</td> <td> Miss Watt and Miss Airlie Mrs Fenton and Mrs J Alexander</td> </tr>
