--- a/staff.html
+++ b/staff.html
@@ -57,13 +57,13 @@
 <table>
 <tr> <th> Class </th> <th> Teacher(s) </th></tr>
 <tr> <td> P1a <br> P1b <br> P1c</td> <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td> </tr>
-<tr> <td> P2a P2b	</td> <td> Mrs Hutchison Miss Kemp</td> </tr>
-<tr> <td> P3a P3b</td> <td> Mrs McVeigh and Mrs Alexander Mr Jones</td> </tr>
-<tr> <td> P4a P4b</td> <td> Miss Watt and Miss Airlie Mrs Fenton and Mrs J Alexander</td> </tr>
-<tr> <td> P5a P5b</td> <td> Mrs Stewart Mrs Watt </td> </tr>
-<tr> <td> P6a P6b</td> <td> Miss Stewart Miss Morrison</td> </tr>
+<tr> <td> P2a <br> P2b</td> <td> Mrs Hutchison <br> Miss Kemp</td> </tr>
+<tr> <td> P3a <br> P3b</td> <td> Mrs McVeigh and Mrs Alexander <br> Mr Jones</td> </tr>
+<tr> <td> P4a <br> P4b</td> <td> Miss Watt and Miss Airlie <br> Mrs Fenton and Mrs J Alexander</td> </tr>
+<tr> <td> P5a <br> P5b</td> <td> Mrs Stewart <br> Mrs Watt </td> </tr>
+<tr> <td> P6a <br> P6b</td> <td> Miss Stewart <br> Miss Morrison</td> </tr>
 <tr> <td> P6/7 </td> <td> Miss Alexander </td> </tr>
-<tr> <td> P7a P7b	</td> <td> Miss Robertson Mrs Goldsmith</td> </tr>
+<tr> <td> P7a <br> P7b	</td> <td> Miss Robertson <br> Mrs Goldsmith</td> </tr>
 
 </table>
 </div> <!-- Closes div class mainBody -->
