--- a/index.html
+++ b/index.html
@@ -10,44 +10,40 @@
 
 <body>
 <!-- ------------------- Top Bar ------------------- -->
-  <div class="topBar"> <!-- Opens div class topBar -->
+<div class="header"> 
+  
+  <div class="top-bar">
 
-    <img id="logo" src="bpslogo.png" alt="School Logo">
-    <h1>Barnhill Primary School</h1>
+  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
 
-    <button id="loginBtn">Login</button>
+  <div class="title"> <h1>Barnhill Primary School<h1> </div>
 
-  </div> <!-- Closes div class topBar -->
+  <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
+
+  <div class="login">  <button>Login</button> </div>
+
+  </div>
 
 <!-- ------------------- Navigation ------------------- -->
-
   <nav>
 
     <ul>
 
       <li><a href="index.html">Home</a></li>
-      <li>
-      <div class="dropdown"> <!-- Opens div class dropdown -->
-          <button class="aboutBtn">About <i class="fa fa caret-down"></i></button>
+      <li class="dropdown">
+          <button class="aboutBtn">About </button>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
             <a href="dates.html">Dates</a>
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
-
-        </div> <!-- Closes div class dropdown -->
-          
-
       </li>
       <li><a href="news.html">News</a></li>
       <li><a href="homeLearning.html">Home Learning</a></li>
       <li><a href="contact.html">Contact</a></li>
 
     </ul>
-
-    <input type="text" placeholder="search...">
-    <button>SEARCH</button>
 
   </nav> 
 
