--- a/staff.html
+++ b/staff.html
@@ -54,18 +54,40 @@
 <!-- ------------------- Main Body ------------------- -->
 
 <div class="mainBody"> <!-- Opens div class mainBody -->
-<table>
-<tr> <th> Class </th> <th> Teacher(s) </th></tr>
-<tr> <td> P1a <br> P1b <br> P1c</td> <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td> </tr>
-<tr> <td> P2a <br> P2b</td> <td> Mrs Hutchison <br> Miss Kemp</td> </tr>
-<tr> <td> P3a <br> P3b</td> <td> Mrs McVeigh and Mrs Alexander <br> Mr Jones</td> </tr>
-<tr> <td> P4a <br> P4b</td> <td> Miss Watt and Miss Airlie <br> Mrs Fenton and Mrs J Alexander</td> </tr>
-<tr> <td> P5a <br> P5b</td> <td> Mrs Stewart <br> Mrs Watt </td> </tr>
-<tr> <td> P6a <br> P6b</td> <td> Miss Stewart <br> Miss Morrison</td> </tr>
-<tr> <td> P6/7 </td> <td> Miss Alexander </td> </tr>
-<tr> <td> P7a <br> P7b	</td> <td> Miss Robertson <br> Mrs Goldsmith</td> </tr>
 
+<div class="gridContainer">
+
+  <h2 class = "gridItem"> tempName: </h2>
+  <table class = "gridItem">
+    <tr> <th> Role </th> <th> Teacher(s) </th></tr>
+    <tr> <td> Head Teacher </td> <td>  Mrs Angela Bruce </td> </tr>
+    <tr> <td> Depute Head </td> <td> Mr Philip Smith </td> </tr>
+    <tr> <td> Acting Principal Teacher </td> <td> Mrs Lindsay Alexander </td> </tr>
+  </table>
+
+<h2 class = "gridItem"> School: </h2>
+<table class = "gridItem">
+  <tr> <th> Class </th> <th> Teacher(s) </th></tr>
+  <tr> <td> P1a <br> P1b <br> P1c</td> <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td> </tr>
+  <tr> <td> P2a <br> P2b</td> <td> Mrs Hutchison <br> Miss Kemp</td> </tr>
+  <tr> <td> P3a <br> P3b</td> <td> Mrs McVeigh and Mrs Alexander <br> Mr Jones</td> </tr>
+  <tr> <td> P4a <br> P4b</td> <td> Miss Watt and Miss Airlie <br> Mrs Fenton and Mrs J Alexander</td> </tr>
+  <tr> <td> P5a <br> P5b</td> <td> Mrs Stewart <br> Mrs Watt </td> </tr>
+  <tr> <td> P6a <br> P6b</td> <td> Miss Stewart <br> Miss Morrison</td> </tr>
+  <tr> <td> P6/7 </td> <td> Miss Alexander </td> </tr>
+  <tr> <td> P7a <br> P7b	</td> <td> Miss Robertson <br> Mrs Goldsmith</td> </tr>
 </table>
+
+<h2 class = "gridItem"> nursery: </h2>
+<table class = "gridItem">
+  <tr> <th> Role </th> <th> Teacher(s) </th></tr>
+  <tr> <td> Senior Early Years Practitioner  </td> <td> Miss Dall	</td> </tr>
+  <tr> <td> Nursery Teacher </td> <td> Mrs  Calder	</td> </tr>
+  <tr> <td> Early Years Educator </td> <td> Mrs Fenton <br> Miss Ishaq <br> Ms Nicoll	</td> </tr>
+  <tr> <td> Early Years Support Assistant </td> <td> Miss Campion <br> Mrs Nadeem </td> </tr>
+  <tr> <td> Early Years Practitioner  </td> <td> Miss Ramsay </td> </tr>
+</table>
+</div>
 </div> <!-- Closes div class mainBody -->
 
 <!-- ------------------- Footer ------------------- -->
