--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 <!-- ------------------- Top Bar ------------------- -->
 <div class="header"> 
-  
   <div class="top-bar">
 
   <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
@@ -20,7 +19,8 @@
 
   <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
 
-  <div class="login">  <button>Login</button> </div>
+  <div class="login">  <button>Login</button>
+</div>
 
   </div>
 
