Button fix and some further staff styling

--- a/staff.html
+++ b/staff.html
@@ -30,7 +30,7 @@
 
       <li><a href="index.html">Home</a></li>
       <li class="dropdown">
-          <button class="aboutBtn">About </button>
+          <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
             <a href="dates.html">Dates</a>
@@ -51,16 +51,17 @@
 
 <div class="gridContainer">
 
-  <h2 class = "gridHead1"> tempName: </h2>
-  <table class = "gridTable1">
+  <h2 class = "gridHead"> TempName: </h2>
+  <h2 class = "gridHead"> School: </h2>
+  <h2 class = "gridHead"> Nursery: </h2>
+  <table class = "gridTable">
     <tr> <th> Role </th> <th> Teacher(s) </th></tr>
     <tr> <td> Head Teacher </td> <td>  Mrs Angela Bruce </td> </tr>
     <tr> <td> Depute Head </td> <td> Mr Philip Smith </td> </tr>
     <tr> <td> Acting Principal Teacher </td> <td> Mrs Lindsay Alexander </td> </tr>
   </table>
 
-<h2 class = "gridHead2"> School: </h2>
-<table class = "gridTable2">
+<table class = "gridTable">
   <tr> <th> Class </th> <th> Teacher(s) </th></tr>
   <tr> <td> P1a <br> P1b <br> P1c</td> <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td> </tr>
   <tr> <td> P2a <br> P2b</td> <td> Mrs Hutchison <br> Miss Kemp</td> </tr>
@@ -72,8 +73,7 @@
   <tr> <td> P7a <br> P7b	</td> <td> Miss Robertson <br> Mrs Goldsmith</td> </tr>
 </table>
 
-<h2 class = "gridHead3"> nursery: </h2>
-<table class = "gridTable3">
+<table class = "gridTable">
   <tr> <th> Role </th> <th> Teacher(s) </th></tr>
   <tr> <td> Senior Early Years Practitioner  </td> <td> Miss Dall	</td> </tr>
   <tr> <td> Nursery Teacher </td> <td> Mrs  Calder	</td> </tr>
