--- a/uniform.html
+++ b/uniform.html
@@ -30,7 +30,7 @@
 
       <li><a href="index.html">Home</a></li>
       <li class="dropdown">
-          <button class="aboutBtn">About </button>
+          <span class="aboutBtn">About </span>
           <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
             <a href="dates.html">Dates</a>
