--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,8 @@
       <li> School: 01382 436993 </li>
     </ul>
 
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3674554963827!2d-2.857674823205578!3d56.47865757336163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1707590023269!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     <h2> Email: </h2>
     <ul>
       <li> School: barnhillprimary@dundeeschools.scot</li>
