--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,8 @@
 <body>
 
 <!-- ------------------- Top Bar ------------------- -->
+<header>
 
-<div class="header"> 
-  <div class="top-bar">
-
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-
-  <div class="title"> <h1>Barnhill Primary School<h1> </div>
-
-  <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
-
-  <div class="login">  <button>Login</button>
-</div>
-
-  </div>
-
-<!-- ------------------- Navigation ------------------- -->
   <nav>
 
     <ul>
@@ -48,8 +34,9 @@
     </ul>
 
   </nav> 
-
-
+  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+  <h1> Barnhill Primary School </h1>
+</header>
 <!-- ------------------- Main Body ------------------- -->
 
 <div class="mainBody"> <!-- Opens div class mainBody -->
@@ -57,9 +44,9 @@
   <h1>Contact</h1>
 
     <h2 style="float: right;"> Location </h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <p>Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
-    <p> A map showing the location of our school is available here, our page on the Dundee City Council website.</p>
-    <p> The map may open in your device's own map application if you are using a mobile device. </p>
+
   
     <h2> Tel: </h2>
     <ul>
@@ -73,7 +60,7 @@
       <li> Mr Smith: psmith966@dundeeschools.scot </li>
     </ul>
 
-  </div> <!-- Closes div class mainBody -->
+
 
 <!-- ------------------- Footer ------------------- -->
 
@@ -99,7 +86,7 @@
     
     </footer>
   </div> <!-- Closes div class footer -->
-
+</div> <!-- Closes div class mainBody -->
 </body>
 
 </html>
