Added image and placeholders to carousel

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="headerimg.jpeg" style="width:100%">
+        <img src="tempTopBar.jpg" style="width:100%">
         <div class="text">Caption Text</div>
       </div>
       
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="headerimage.jpeg" style="width:100%">
+        <img src="bpslogo.png" style="width:100%">
         <div class="text">Caption Two</div>
       </div>
       
