Updating nav for adding content

--- a/homeLearning.html
+++ b/homeLearning.html
@@ -11,21 +11,8 @@
 
 <body>
 <!-- ------------------- Top Bar ------------------- -->
-<div class="header"> 
-  <div class="top-bar">
+<header>
 
-  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-
-  <div class="title"> <h1>Barnhill Primary School<h1> </div>
-
-  <div class="search"> <input type=text placeholder="Search..."> <button>Go</button> </div>
-
-  <div class="login">  <button>Login</button>
-</div>
-
-  </div>
-
-<!-- ------------------- Navigation ------------------- -->
   <nav>
 
     <ul>
@@ -47,6 +34,9 @@
     </ul>
 
   </nav> 
+  <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+  <h1> Barnhill Primary School </h1>
+</header>
 
 
 <!-- ------------------- Main Body ------------------- -->
