Fixed footer (only for index rn)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <!-- ------------------- Main Body ------------------- -->
 
 <div class="mainBody"> <!-- Opens div class mainBody -->
+  <div class="content"> 
 
     <h2> Announcements:</h2>
 
@@ -136,7 +137,7 @@
 <h1 style="display: block;"> AAAAA</h1>
     <!-- Head Teacher Image and Message -->
 
-  
+  </div>
 
 <!-- ------------------- Footer ------------------- -->
 
@@ -163,6 +164,7 @@
     </footer>
   </div> <!-- Closes div class footer -->
 </div> <!-- Closes div class mainBody -->
+
  </body>
 
 </html>
